--- a/pom.xml
+++ b/pom.xml
@@ -133,12 +133,7 @@
 		    <scope>provided</scope>
 		</dependency>
 		
-		<!-- 工具类用扩展包 -->
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-  			<artifactId>gson</artifactId>
-  			<version>2.8.5</version>
-		</dependency>
+		<!-- 工具类用扩展包 -->	
 		<dependency>
 			<groupId>commons-lang</groupId>
   			<artifactId>commons-lang</artifactId>
@@ -153,6 +148,11 @@
 			<groupId>ch.qos.logback</groupId>
 		  	<artifactId>logback-core</artifactId>
 		</dependency> 	
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.47</version>
+		</dependency>
 	</dependencies>
 		
 	<build>
