--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>H5PageGenerate</artifactId>
+	<artifactId>iot_process</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>H5PageGenerate</name>
-	<description>Demo project for Spring Boot</description>
+	<name>iot_process</name>
+	<description>iot_processproject for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
