作业评估更新

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,6 +61,10 @@ spring.datasource.druid.stat-view-servlet.reset-enable=false
 spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=123456
 
+########################################################
+# json
+########################################################
+spring.jackson.time-zone=GMT+8
 
 ########################################################
 # mybatis
