--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,12 +29,13 @@ spring.activiti.check-process-definitions = false
 # datasource
 ########################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url = jdbc:oracle:thin:@192.168.3.3:1521:orcl
+spring.datasource.url = jdbc:oracle:thin:@127.0.0.1:1521:orcl
+#spring.datasource.url = jdbc:oracle:thin:@192.168.15.137:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@192.168.1.137:1521:orcl
 
 #spring.datasource.username = sts
-#spring.datasource.password = sts123
+#spring.datasource.password = Sts123
 spring.datasource.username = C##STS
 spring.datasource.password = STS123
 spring.datasource.driverClassName = oracle.jdbc.driver.OracleDriver
