--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#server.port= 10238
+server.port= 8080
 server.tomcat.uri-encoding = UTF-8
 #打war包时需要隐藏此项
-#server.servlet.path =/iot_process
-spring.jmx.default-domain = iot_process
+server.servlet.path =/iot_process
+#spring.jmx.default-domain = iot_process
 
 ########################################################
 # logging
@@ -16,7 +16,7 @@ logging.pattern.file = %d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 # JPA
 ########################################################
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jackson.serialization.indent-output = true
 
 
@@ -30,7 +30,7 @@ spring.activiti.check-process-definitions = false
 ########################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
-#spring.datasource.url = jdbc:oracle:thin:@192.168.15.137:1521:orcl
+#spring.datasource.url = jdbc:oracle:thin:@192.168.3.100:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@192.168.1.137:1521:orcl
 spring.datasource.username = sts
