--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.jmx.default-domain = iot_process
 # logging
 ########################################################
 #日志配置,输出到文本，
-logging.config=classpath:logback.xml
-logging.path=D:/logs/process_log
+#logging.config=classpath:logback.xml
+#logging.path=D:/logs/process_log
 #logging.level.com.mooc.springbootlogback=trace
 #idea控制台默认日志级别修改
-debug=true
+#debug=true
 # 指定输出日志的文件名，默认输出至当前项目目录下
-logging.file=process.log
+#logging.file=process.log
 #logging.path = ../log
 #logging.level.cn.soa = debug
 #logging.pattern.console = %d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
