--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,21 @@
 server.port= 8080
 server.tomcat.uri-encoding = UTF-8
 #打war包时需要隐藏此项
-server.servlet.path =/iot_process
+server.servlet.context-path=/iot_process
+#server.servlet.path =/iot_process
 #spring.jmx.default-domain = iot_process
 
 ########################################################
 # logging
 ########################################################
 #日志配置,输出到文本，
-logging.config=classpath:logback.xml
-logging.path=D:/logs/process_log
+#logging.config=classpath:logback.xml
+#logging.path=D:/logs/process_log
 #logging.level.com.mooc.springbootlogback=trace
 #idea控制台默认日志级别修改
-debug=true
+#debug=true
 # 指定输出日志的文件名，默认输出至当前项目目录下
-logging.file=process.log
+#logging.file=process.log
 #logging.path = ../log
 #logging.level.cn.soa = debug
 #logging.pattern.console = %d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
@@ -37,12 +38,12 @@ spring.activiti.check-process-definitions = false
 # datasource
 ########################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
-#spring.datasource.url = jdbc:oracle:thin:@192.168.3.100:1521:orcl
+#spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
+spring.datasource.url = jdbc:oracle:thin:@192.168.15.128:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@192.168.1.137:1521:orcl
 spring.datasource.username = sts
-spring.datasource.password = sts123
+spring.datasource.password = Sts123
 #spring.datasource.username = C##STS
 #spring.datasource.password = STS123
 spring.datasource.driverClassName = oracle.jdbc.driver.OracleDriver
