--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port= 8080
 server.tomcat.uri-encoding = UTF-8
 #打war包时需要隐藏此项
-server.servlet.context-path=/iot_process
+#server.servlet.context-path=/iot_process
 #server.servlet.path =/iot_process
-#spring.jmx.default-domain = iot_process
+spring.jmx.default-domain = iot_process
 
 ########################################################
 # logging
@@ -38,12 +38,12 @@ spring.activiti.check-process-definitions = false
 # datasource
 ########################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
-spring.datasource.url = jdbc:oracle:thin:@192.168.15.128:1521:orcl
+spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
+#spring.datasource.url = jdbc:oracle:thin:@192.168.15.128:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@192.168.1.137:1521:orcl
 spring.datasource.username = sts
-spring.datasource.password = Sts123
+spring.datasource.password = sts123
 #spring.datasource.username = C##STS
 #spring.datasource.password = STS123
 spring.datasource.driverClassName = oracle.jdbc.driver.OracleDriver
