--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port= 8080
 server.tomcat.uri-encoding = UTF-8
 #打war包时需要隐藏此项
-#server.servlet.path =/iot_process
+server.servlet.path =/iot_process
 spring.jmx.default-domain = iot_process
 
 ########################################################
@@ -16,7 +16,7 @@ spring.jmx.default-domain = iot_process
 # 指定输出日志的文件名，默认输出至当前项目目录下
 #logging.file=process.log
 #logging.path = ../log
-#logging.level.cn.soa = debug
+#logging.level.cn.soa = info
 #logging.pattern.console = %d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
 #logging.pattern.file = %d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
