--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,17 @@
             <version>1.3.5</version>
         </dependency> -->
         
+        <!-- POI 操控excel依赖包 -->
+        <dependency>
+             <groupId>org.apache.poi</groupId>
+             <artifactId>poi</artifactId>
+             <version>3.17</version>
+       </dependency>
+       <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>3.17</version>
+       </dependency>
         
         <!-- 编译和测试用 -->
 	    <dependency>
