--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,7 @@
 	</dependencies>
 		
 	<build>
+		<finalName>iot_process</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -178,8 +179,8 @@
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.5</version>
-                <configuration>
-                    <!--generatorConfig.xml位置-->
+               <!--  <configuration>
+                    generatorConfig.xml位置
                     <configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
@@ -192,7 +193,7 @@
 							<goal>generate</goal>
 						</goals>
 					</execution>
-				</executions>
+				</executions> -->
             </plugin>
 		</plugins>		
 	</build>
