--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-
 server.port= 8080
+
 server.tomcat.uri-encoding = UTF-8
 #打war包时需要隐藏此项
+server.servlet.context-path=/iot_process
 #server.servlet.path =/iot_process
-#server.servlet.context-path=/iot_process
+
 spring.jmx.default-domain = iot_process
 
 ########################################################
@@ -15,12 +16,6 @@ spring.jmx.default-domain = iot_process
 #logging.level.com.mooc.springbootlogback=trace
 #idea控制台默认日志级别修改
 #debug=true
-# 指定输出日志的文件名，默认输出至当前项目目录下
-#logging.file=process.log
-#logging.path = ../log
-#logging.level.cn.soa = info
-#logging.pattern.console = %d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
-#logging.pattern.file = %d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
 ########################################################
 # JPA
@@ -40,7 +35,7 @@ spring.activiti.check-process-definitions = false
 ########################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
-#spring.datasource.url = jdbc:oracle:thin:@192.168.15.128:1521:orcl
+#spring.datasource.url = jdbc:oracle:thin:@192.168.15.129:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@10.89.90.118:1521:orcl
 #spring.datasource.url = jdbc:oracle:thin:@192.168.1.137:1521:orcl
 spring.datasource.username = sts
