--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-#server.port= 8080
-
+server.port= 10238
 server.tomcat.uri-encoding = UTF-8
 #打war包时需要隐藏此项
 server.servlet.context-path=/iot_process
