--- a/src/main/resources/process/variables.properties
+++ b/src/main/resources/process/variables.properties
@@ -1,5 +1,5 @@
 ####### 人员管理系统的服务器配置 ########
-userManager.server.ip = localhost
+userManager.server.ip = 192.168.1.11
 userManager.server.port = 10238
  
  
